# jupyter-archive

./: .copier-answers.yml  .gitignore  .prettierignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  conftest.py  environment.yml  install.json  package-lock.json  package.json  pyproject.toml  rever.xsh  setup.py  setupbase.py
.binder/: environment.yml  postBuild
.github/workflows/: build.yml  check-release.yml  publish.yml
binder/: environment.yml  postBuild
jupyter-config/jupyter_notebook_config.d/: jupyter_archive.json
jupyter-config/server-config/: jupyter-archive.json
jupyter_archive/: __init__.py  _version.py  handlers.py
jupyter_archive/tests/: test_archive_handler.py  test_archive_hanlder.py  test_zip_hanlder.py
schema/: archive.json
src/: icon.ts  index.ts
style/: base.css
ui-tests/: jupyter_server_test_config.py  package.json  playwright-notebook.config.js
ui-tests/tests/: jupyter-archive.spec.ts
ui-tests/tests/data/: folder.tar.xz
